@@ -8,6 +8,7 @@ $Id$
           HAVE_ECORE_CON_OPENSSL was superseeded by
           ecore_con_ssl_available_get()
         * m4/Makefile.am: ac_ecore_con_check_openssl.m4 removed
+        * src/plugins/sylpheed.c: Fixed a memory leak
 
 2005-01-29 Tilman Sauerbeck <tilman -at- code-monkey.de>
         * configure.ac, src/plugins/sylpheed:
